src/internal/codegen/snapshots/hebi__internal__codegen__tests__while_break.snap
---
source: src/internal/codegen/tests.rs
expression: snapshot
---
# Input:
while true:
  break


# Func:
function `main` (registers: 1, length: 8, constants: 2)
.code
  0 | load_true
  1 | jump_if_false 6
  3 | jump 4
  5 | jump_loop 5
  7 | return



